[gd_scene load_steps=7 format=3 uid="uid://dima6utmidwdv"]

[ext_resource type="Script" path="res://App/Scenes/Levels/UnitButton.gd" id="1_bfee0"]
[ext_resource type="Texture2D" uid="uid://b4xpcuksnx4y0" path="res://icon.svg" id="2_2afb0"]
[ext_resource type="Texture2D" uid="uid://b0y2rxixafef1" path="res://Assets/Images/UI/01_Unit_Box.png" id="2_veqpy"]
[ext_resource type="FontFile" uid="uid://bcsl4f1nq6mwv" path="res://App/Themes/Fonts/Protest_Riot/ProtestRiot-Regular.ttf" id="4_82i1q"]

[sub_resource type="ButtonGroup" id="ButtonGroup_rv8sc"]
resource_local_to_scene = false

[sub_resource type="GDScript" id="GDScript_q5otx"]
resource_name = "ButtonHighlight"
script/source = "extends TextureButton

@onready var focus_outline: Line2D = $FocusOutline

func _process(_delta: float) -> void:
	var was_visible = focus_outline.visible
	focus_outline.visible = button_pressed
	if focus_outline.visible > was_visible:
		var tween = create_tween().set_ease(Tween.EASE_OUT).set_trans(Tween.TRANS_CUBIC)
		tween.set_parallel()
		tween.tween_property(focus_outline, \"width\", 10, 0.5).from(30)
		tween.tween_property(focus_outline, \"modulate\", Color.WHITE, 0.5).from(Color.GREEN_YELLOW)


"

[node name="UnitButton" type="MarginContainer"]
custom_minimum_size = Vector2(120, 155)
offset_right = 120.0
offset_bottom = 154.0
script = ExtResource("1_bfee0")

[node name="Button" type="TextureButton" parent="."]
layout_mode = 2
focus_mode = 0
toggle_mode = true
button_group = SubResource("ButtonGroup_rv8sc")
texture_normal = ExtResource("2_veqpy")
ignore_texture_size = true
stretch_mode = 0
script = SubResource("GDScript_q5otx")

[node name="FocusOutline" type="Line2D" parent="Button"]
visible = false
points = PackedVector2Array(0, 0, 120, 0, 120, 155, 0, 155, 0, 0)
joint_mode = 2
end_cap_mode = 2

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2
vertical = true

[node name="Control" type="Control" parent="BoxContainer"]
custom_minimum_size = Vector2(0, 20.62)
layout_mode = 2

[node name="ButtonIcon" type="TextureRect" parent="BoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
mouse_filter = 2
texture = ExtResource("2_2afb0")
expand_mode = 1
stretch_mode = 5

[node name="ButtonLabel" type="Label" parent="BoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_82i1q")
theme_override_font_sizes/font_size = 30
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NumberKeyLabel" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.352941)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_font_sizes/font_size = 40
text = "1"
